Back-end: created folder ControllerModels with LoginUser model and new RegisterUser model, changed registerUser method in AuthServices
