# Back-end/Paradigm.Express.WebApi.Bootstrap-main/src/controllers/controllerModels/register.user.ts
@@ -1,0 +1,9 @@
+
+export interface RegisterUser {
+    name: string;
+    lastName: string;
+    alias?: string;
+    mail: string;
+    password: string;
+    userType: number;
+}
