# Back-end/Paradigm.Express.WebApi.Bootstrap-main/src/docs/swagger.yaml
@@ -13,13 +13,9 @@ definitions:
         required:
             - mail
             - password
-    User:
+    RegisterUser:
         description: ""
         properties:
-            id:
-                type: number
-                format: double
-                description: ""
             name:
                 type: string
                 description: ""
@@ -39,24 +35,13 @@ definitions:
                 type: number
                 format: double
                 description: ""
-            active:
-                type: number
-                format: double
-                description: ""
-            role:
-                type: number
-                format: double
-                description: ""
         type: object
         required:
-            - id
             - name
             - lastName
             - mail
             - password
             - userType
-            - active
-            - role
     DOMHighResTimeStamp:
         description: ""
         properties: {}
@@ -138,6 +123,50 @@ definitions:
             - BUBBLING_PHASE
             - CAPTURING_PHASE
             - NONE
+    User:
+        description: ""
+        properties:
+            id:
+                type: number
+                format: double
+                description: ""
+            name:
+                type: string
+                description: ""
+            lastName:
+                type: string
+                description: ""
+            alias:
+                type: string
+                description: ""
+            mail:
+                type: string
+                description: ""
+            password:
+                type: string
+                description: ""
+            userType:
+                type: number
+                format: double
+                description: ""
+            active:
+                type: number
+                format: double
+                description: ""
+            role:
+                type: number
+                format: double
+                description: ""
+        type: object
+        required:
+            - id
+            - name
+            - lastName
+            - mail
+            - password
+            - userType
+            - active
+            - role
 info:
     description: 'Paradigm API.'
     license:
@@ -185,13 +214,13 @@ paths:
                 -
                     description: ""
                     in: body
-                    name: user
+                    name: registerUser
                     required: true
                     schema:
-                        $ref: '#/definitions/User'
+                        $ref: '#/definitions/RegisterUser'
     /api/events:
         get:
-            operationId: EventsGet
+            operationId: EventsGetFeaturedEvents
             produces:
                 - text/html
                 - application/json
@@ -199,9 +228,11 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        type: array
-                        items:
-                            $ref: '#/definitions/Event'
+                        type: object
+                '404':
+                    description: 'Featured events not found'
+                    schema:
+                        type: string
                 '500':
                     description: 'Internal server error'
                     schema:
@@ -371,9 +402,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        type: array
-                        items:
-                            $ref: '#/definitions/Event'
+                        type: object
                 '404':
                     description: 'Category not found'
                     schema:
